k8s/admin/argocd/dashboard-route.yaml

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-dashboard-route
  namespace: traefik
spec:
  routes:
  - match: Host(`argocd.synthia.tech`)
    kind: Rule
    middlewares:
    - name: admin-basic-auth-middleware
      namespace: traefik
    services:
    - name: argocd-argo-cd-server
      namespace: argocd
      kind: Service
      port: 80
      scheme: http
  tls:
    secretName: argocd-admin-tls
    domains: 
    - main: argocd.synthia.tech
